2012-01-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* local/cf-x86-x86_64-w64-mingw32.mk,
	* local/derna-i586-mingw32msvc.mk: increased stack size 32M/64M so it
	  never overflows; stack overflow crashes sdcc without error message

2011-12-25 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* local/cf-x86-x86_64-w64-mingw32.mk: increase stack size to 4M
	  so compiling gcc-torture-execute-div-cmp-1 won't stack overflow

2011-10-11 Borut Razem <borut.razem AT gmail.com>

	* local/cf-x86-x86_64-w64-mingw32.mk, local/derna-i586-mingw32msvc.mk:
	  turn on -O2 optimization for mingw* builds

2011-10-05 Philipp Klaus Krause <pkk@spth.de>

	* lib/variables.mk:
	  Add test-ucz80 to the list of regression test targets.

2011-09-04 Borut Razem <borut.razem AT gmail.com>

	* support/scripts/sdcc.nsi: include readline5.dll in 64bit package

2011-09-02 Borut Razem <borut.razem AT gmail.com>

	* lib/bootstrap.mk: 2nd try:
	  WIN64 setup package renamed to sdcc-yyymmdd-bbbb-x64-setup.exe

2011-09-01 Borut Razem <borut.razem AT gmail.com>

	* components/sdcc.mk: pass WINE to regtest Makefile,
	  disable wine fixme messagess
	* lib/bootstrap.mk:
	  WIN64 setup package renamed to sdcc-yyymmdd-bbbb-x64-setup.exe

2011-08-31 Borut Razem <borut.razem AT gmail.com>

	* local/cf-x86-x86_64-w64-mingw32.mk, local/cf-x86.mk:
	  added Windows 64bit mingw_w64 cross-compilation
	* local/cf-x86-i386-unknown-linux2.5.mk,
	  local/cf-x86-i586-mingw32msvc.mk: moved to local/old
	* components/sdcc.mk: use wine64 for running mingw_w64 regtests
	* lib/bootstrap.mk: added libgcc_s_sjlj-1.dll and libstdc++-6.dll dlls
	  to mingw_w64 packages; call makensis with -DWIN64

2011-08-26 Borut Razem <borut.razem AT gmail.com>

	* sdcc-build-bootstrap.sh: don't use "make -C"
	* sdcc-build-bootstrap.sh: don't use poshd/popd

2011-08-24 Borut Razem <borut.razem AT gmail.com>

	* components/sdcc.mk: added MAKESILENTFLAG when making sdcc-regression

2011-08-15 Borut Razem <borut.razem AT gmail.com>
